# LETI

./: .gitignore  .gitmodules  Matrix.h  MatrixMultiplier.cpp  README.md  TestMatrixMultiplier.cpp  main.cpp
DB/3341_Maltsev/lab1/: db.drawio  er.drawio
DB/3341_Maltsev/lab2/: docker-compose.yml  lab2.sql
DB/3341_Maltsev/lab3/: Dockerfile.node  query.js  schema.js  seed.js
DB/3341_Maltsev/lab4/: Dockerfile.node  docker-compose.yml  query.js  schema.js
DB/3341_Maltsev/lab5/: Dockerfile.node  docker-compose.yml  query.js  seed.js  server.js  test.sh
ML/Maltsev_Kirill_lb1/: main.ipynb  main.py  requirements.txt
ML/Maltsev_Kirill_lb2/: main.ipynb
ML/Maltsev_Kirill_lb3/: main.ipynb
MLTA/cw/: Limitation.hpp  Maltsev_Kirill_cw.docx  Solution.hpp  main.cpp  mlta_types.hpp  print.cpp  print.hpp  utils.hpp
MLTA/cw/src/: Limitation.hpp  LimitationManager.hpp  Solution.hpp  Splice.hpp  utils.hpp
NET/Maltsev_Kirill_lb1/: Maltsev_Kirill_lb1.docx  lab1_var9.jnst
NET/Maltsev_Kirill_lb2/: Maltsev_Kirill_lb2.docx  lab2_var9.jnst
PA/Maltsev_Kirill_lb1/: .gitignore  Maltsev_Kirill_lb1.docx  main.cpp
PA/Maltsev_Kirill_lb1/benchmark/: Benchmark.cpp  CMakeLists.txt
PA/Maltsev_Kirill_lb1/benchmark-graph-builder/: main.py
PA/Maltsev_Kirill_lb1/src/: Matrix.hpp  MatrixMultiplier.hpp
PA/Maltsev_Kirill_lb1/ut/: CMakeLists.txt  TestMatrixUtilities.cpp
PA/Maltsev_Kirill_lb2/: BoundedMPMCQueue.hpp  CoarseBoundedQueue.hpp  CoarseUnboundedQueue.hpp  FineBoundedQueue.hpp  FineUnboundedQueue.hpp  a.out
PA/Maltsev_Kirill_lb2/benchmark/: Benchmark.cpp  CMakeLists.txt  benchmark.csv  benchmark.py
PA/Maltsev_Kirill_lb2/ut/: CMakeLists.txt  Test.cpp
PA/Maltsev_Kirill_lb3/: .gitignore  Maltsev_Kirill_lb3.doc
PA/Maltsev_Kirill_lb3/parallel_merge_sort/: GenVec.hpp  merge_sort.hpp
PA/Maltsev_Kirill_lb3/parallel_merge_sort/benchmark/: Benchmark.cpp  CMakeLists.txt  benchmark.csv  benchmark.py
PA/Maltsev_Kirill_lb3/parallel_merge_sort/ut/: CMakeLists.txt  TestParallelMergeSort.cpp
PA/Maltsev_Kirill_lb3/parallel_strassen/: CMakeLists.txt
PA/Maltsev_Kirill_lb4/: .gitignore
PA/Maltsev_Kirill_lb4/MatrixMultiplication/: Matrix.hpp  MatrixGenerator.hpp  benchmark.csv  benchmark.py  main.cu  multiply.hpp  multiply_parallel.cu
PA/Maltsev_Kirill_lb4/MergeSort/: benchmark.csv  benchmark.py  main.cu  requirements.txt  (+1 more)
PA/lb1/: .gitignore  .gitmodules  Benchmark.cpp  CMakeLists.txt  Logger.hpp  Matrix.hpp  MatrixGenerator.hpp  MatrixMultiplier.hpp  Task.hpp  Test.cpp  ThreadPool.hpp  a.out  main.cpp
PA/lb1/Benchmark-graph-builder/: main.py  requirements.txt
PA/lb1/ut/: CMakeLists.txt  TestMatrixUtilities.cpp
SevenSegmentIndicator/: seven_segment_indicator.circ
WEB/Maltsev_Kirill_lb1/: Maltsev_Kirill_lb1.docx  docker-compose.yml
WEB/Maltsev_Kirill_lb2/: Dockerfile  Maltsev_Kirill_lb2.docx  docker-compose.yml
WEB/Maltsev_Kirill_lb3/: Dockerfile  docker-compose.yml
WEB/Maltsev_Kirill_lb4/: Dockerfile  docker-compose.yml
WEB/lb1/: docker-compose.yml  index.html
(+96 files in other folders)
